--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_install:
     fi
 
 install:
-  - cd c-cpp-flylint-server && npm install && npm run vscode:prepublish
+  - cd c-cpp-flylint-server && npm install && npm run compile
 
 script:
   - cd c-cpp-flylint-server && npm test
