--- a/.travis.yml
+++ b/.travis.yml
@@ -20,4 +20,4 @@ install:
   - cd c-cpp-flylint-server && npm install && npm run compile
 
 script:
-  - cd c-cpp-flylint-server && npm run test
+  - npm run test
