--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,8 @@ before_install:
     fi
 
 install:
-  - cd c-cpp-flylint-server && npm install && npm run compile
+  - cd c-cpp-flylint-server && npm install && npm run compile && cd .
+  - cd c-cpp-flylint && npm install && npm run vscode:prepublish && cd .
 
 script:
-  - npm run test
+  - cd c-cpp-flylint-server && npm run test
