--- a/c-cpp-flylint/package.json
+++ b/c-cpp-flylint/package.json
@@ -61,7 +61,7 @@
             "onType"
           ],
           "default": "onSave",
-          "description": "Run the linter on save (onSave) or on type (onType)"
+          "description": "Run the linter upon typing (onType), when possible, or on save (onSave)."
         },
 
         "c-cpp-flylint.cppcheck.enable": {
