--- a/c-cpp-flylint/.vscode/settings.json
+++ b/c-cpp-flylint/.vscode/settings.json
@@ -7,5 +7,8 @@
         "out": true // set this to false to include "out" folder in search results
     },
     // We want to use the TS server from our node_modules folder to control its version.
-    "typescript.tsdk": "./node_modules/typescript/lib"
+    "typescript.tsdk": "./node_modules/typescript/lib",
+    "markdownlint.config": {
+        "MD024": false
+    }
 }
