Switch to cross-spawn NPM module. Fixes #9

--- a/c-cpp-flylint/package.json
+++ b/c-cpp-flylint/package.json
@@ -585,6 +585,7 @@
     "typescript": "2.2.2"
   },
   "dependencies": {
+    "cross-spawn": "^5.1.0",
     "lodash": "^4.17.4",
     "slash": "^1.0.0",
     "var-expansion": "^0.1.0",
