--- a/c-cpp-flylint-server/package.json
+++ b/c-cpp-flylint-server/package.json
@@ -13,6 +13,7 @@
     "node": "*"
   },
   "dependencies": {
+    "cross-spawn": "^5.1.0",
     "lodash": "^4.17.4",
     "slash": "^1.0.0",
     "var-expansion": "^0.1.0",
