--- a/c-cpp-flylint-server/package.json
+++ b/c-cpp-flylint-server/package.json
@@ -16,6 +16,7 @@
     "cross-spawn": "^5.1.0",
     "lodash": "^4.17.4",
     "slash": "^1.0.0",
+    "tmp": "^0.0.33",
     "var-expansion": "^0.1.0",
     "vscode-languageserver": "^3.2.0",
     "vscode-uri": "^1.0.1",
