--- a/c-cpp-flylint-server/package.json
+++ b/c-cpp-flylint-server/package.json
@@ -18,7 +18,7 @@
     "slash": "^1.0.0",
     "tmp": "^0.0.33",
     "var-expansion": "^0.1.0",
-    "vscode-languageserver": "^3.2.0",
+    "vscode-languageserver": "3.3.0",
     "vscode-uri": "^1.0.1",
     "which": "^1.2.14"
   },
