--- a/c-cpp-flylint/package.json
+++ b/c-cpp-flylint/package.json
@@ -586,7 +586,7 @@
     "tmp": "^0.0.33",
     "var-expansion": "^0.1.0",
     "vscode": "^1.1.0",
-    "vscode-languageclient": "^3.2.0",
+    "vscode-languageclient": "3.3.0",
     "vscode-uri": "^1.0.1",
     "which": "^1.2.14"
   }
