--- a/c-cpp-flylint/package.json
+++ b/c-cpp-flylint/package.json
@@ -10,7 +10,7 @@
   "publisher": "jbenden",
   "version": "0.3.0",
   "license": "SEE LICENSE IN LICENSE",
-  "icon": "C-Cpp-FlyLint_icon.svg",
+  "icon": "C-Cpp-FlyLint_icon.png",
   "galleryBanner": {
     "color": "#303f9f",
     "theme": "dark"
