--- a/c-cpp-flylint-server/package.json
+++ b/c-cpp-flylint-server/package.json
@@ -18,21 +18,22 @@
     "slash": "^1.0.0",
     "tmp": "^0.0.33",
     "var-expansion": "^0.1.0",
-    "vscode-languageserver": "3.3.0",
+    "vscode-languageserver-protocol": "3.4.4",
+    "vscode-languageserver": "3.4.3",
     "vscode-uri": "^1.0.1",
-    "which": "^1.2.14"
+    "which": "^1.3.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.0.0",
+    "@types/chai": "^4.0.4",
     "@types/chai-as-promised": "^0.0.31",
     "@types/mock-fs": "^3.6.30",
-    "@types/node": "^7.0.12",
-    "chai": "^4.0.2",
-    "chai-as-promised": "^7.0.0",
-    "mocha": "^3.4.2",
-    "mocha-typescript": "^1.1.4",
-    "mock-fs": "^4.4.1",
-    "typescript": "2.2.2"
+    "@types/node": "^8.0.34",
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
+    "mocha": "^4.0.1",
+    "mocha-typescript": "^1.1.11",
+    "mock-fs": "^4.4.2",
+    "typescript": "^2.5.3"
   },
   "scripts": {
     "compile": "installServerIntoExtension ../c-cpp-flylint ./package.json ./tsconfig.json && tsc -p .",
