--- a/c-cpp-flylint/package.json
+++ b/c-cpp-flylint/package.json
@@ -25,7 +25,7 @@
   },
   "homepage": "https://github.com/jbenden/vscode-c-cpp-flylint/blob/master/README.md",
   "engines": {
-    "vscode": "^1.13.0"
+    "vscode": "^1.16.0"
   },
   "categories": [
     "Languages",
@@ -568,16 +568,16 @@
     "update-vscode": "node ./node_modules/vscode/bin/install"
   },
   "devDependencies": {
-    "@types/chai": "^4.0.0",
+    "@types/chai": "^4.0.4",
     "@types/chai-as-promised": "^0.0.31",
     "@types/mock-fs": "^3.6.30",
     "@types/node": "^7.0.12",
-    "chai": "^4.0.2",
-    "chai-as-promised": "^7.0.0",
-    "mocha": "^3.4.2",
-    "mocha-typescript": "^1.1.4",
-    "mock-fs": "^4.4.1",
-    "typescript": "2.2.2"
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
+    "mocha": "^4.0.1",
+    "mocha-typescript": "^1.1.11",
+    "mock-fs": "^4.4.2",
+    "typescript": "^2.5.3"
   },
   "dependencies": {
     "cross-spawn": "^5.1.0",
@@ -585,9 +585,9 @@
     "slash": "^1.0.0",
     "tmp": "^0.0.33",
     "var-expansion": "^0.1.0",
-    "vscode": "^1.1.0",
-    "vscode-languageclient": "3.3.0",
+    "vscode": "^1.1.6",
+    "vscode-languageclient": "3.4.5",
     "vscode-uri": "^1.0.1",
-    "which": "^1.2.14"
+    "which": "^1.3.0"
   }
 }
