--- a/c-cpp-flylint-server/package.json
+++ b/c-cpp-flylint-server/package.json
@@ -13,13 +13,13 @@
     "node": "*"
   },
   "dependencies": {
-    "cross-spawn": "^5.1.0",
+    "cross-spawn": "^6.0.0",
     "lodash": "^4.17.4",
     "slash": "^1.0.0",
     "tmp": "^0.0.33",
     "var-expansion": "^0.1.0",
-    "vscode-languageserver-protocol": "3.4.4",
-    "vscode-languageserver": "3.4.3",
+    "vscode-languageserver": "^3.5.0",
+    "vscode-languageserver-protocol": "^3.5.0",
     "vscode-uri": "^1.0.1",
     "which": "^1.3.0"
   },
@@ -30,8 +30,8 @@
     "@types/node": "^8.0.34",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
-    "mocha": "^4.0.1",
-    "mocha-typescript": "^1.1.11",
+    "mocha": "^5.0.0",
+    "mocha-typescript": "^1.1.12",
     "mock-fs": "^4.4.2",
     "typescript": "^2.5.3"
   },
