--- a/c-cpp-flylint/package.json
+++ b/c-cpp-flylint/package.json
@@ -574,19 +574,19 @@
     "@types/node": "^7.0.12",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
-    "mocha": "^4.0.1",
+    "mocha": "^5.0.1",
     "mocha-typescript": "^1.1.11",
     "mock-fs": "^4.4.2",
     "typescript": "^2.5.3"
   },
   "dependencies": {
-    "cross-spawn": "^5.1.0",
+    "cross-spawn": "^6.0.0",
     "lodash": "^4.17.4",
     "slash": "^1.0.0",
     "tmp": "^0.0.33",
     "var-expansion": "^0.1.0",
     "vscode": "^1.1.6",
-    "vscode-languageclient": "3.4.5",
+    "vscode-languageclient": "^3.5.0",
     "vscode-uri": "^1.0.1",
     "which": "^1.3.0"
   }
