CppCheck: Added support for avr8 platform.

--- a/c-cpp-flylint/package.json
+++ b/c-cpp-flylint/package.json
@@ -320,6 +320,7 @@
         "c-cpp-flylint.cppcheck.platform": {
           "type": "string",
           "enum": [
+            "avr8",
             "unix32",
             "unix64",
             "win32A",
