--- a/c-cpp-flylint/package.json
+++ b/c-cpp-flylint/package.json
@@ -81,6 +81,11 @@
           "default": "onSave",
           "description": "Run the linter upon typing (onType), when possible, or on save (onSave)."
         },
+        "c-cpp-flylint.excludeFromWorkspacePaths": {
+          "type": "array",
+          "default": [],
+          "description": "A list of paths within the workspace for which no analyses/diagnostics will be displayed."
+        },
         "c-cpp-flylint.language": {
           "type": "string",
           "default": "c++",
