--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
     },
     // We want to use the TS server from our node_modules folder to control its version.
     "typescript.tsdk": "./node_modules/typescript/lib",
+    "typescript.tsc.autoDetect": "off",
     "markdownlint.config": {
         "MD024": false
     }
