--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -18,8 +18,8 @@ engines:
     enabled: true
 ratings:
   paths:
-  - "c-cpp-flylint/src/**/*"
-  - "c-cpp-flylint-server/src/**/*"
+  - "client/src/**/*"
+  - "server/src/**/*"
   - "**/package.json"
   - "**/README.md"
   - "**/CHANGELOG.md"
