Adjusted category per recommendation

--- a/client/package.json
+++ b/client/package.json
@@ -28,7 +28,7 @@
     "vscode": "^1.16.0"
   },
   "categories": [
-    "Languages",
+    "Programming Languages",
     "Linters"
   ],
   "keywords": [
