Flatten folder layout (#40)
Flatten the folder layout; such that `npm` commands run correctly from the root of the project, and having the feature of single instance VS Code during development.

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -6,16 +6,16 @@
         ],
         "module": "commonjs",
         "sourceMap": true,
-        "outDir": "../c-cpp-flylint/server",
+        "outDir": "out",
         "newLine": "LF",
         "noUnusedLocals": false,
         "noUnusedParameters": true,
         "strictNullChecks": true,
-        "experimentalDecorators": true
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true
     },
-    "include": [
-        "src/server.ts",
-        "src/linters/**/*.ts",
-        "typings.d.ts"
+    "exclude": [
+        "node_modules",
+        "server"
     ]
 }
