--- a/server/package.json
+++ b/server/package.json
@@ -36,9 +36,11 @@
     "typescript": "^2.5.3"
   },
   "scripts": {
-    "compile": "installServerIntoExtension ../c-cpp-flylint ./package.json ./tsconfig.json && tsc -p .",
-    "watch": "installServerIntoExtension ../c-cpp-flylint ./package.json ./tsconfig.json && tsc --watch -p .",
-    "test": "tsc -p . && mocha ../c-cpp-flylint/server/linters/tests/*.test.js",
-    "test-watch": "mocha-typescript-watch -p . ../c-cpp-flylint/server/linters/tests/*.test.js"
+    "installServer": "installServerIntoExtension ../client ./package.json ./tsconfig.json",
+    "compile": "installServerIntoExtension ../client ./package.json ./tsconfig.json && tsc -p .",
+    "watch": "installServerIntoExtension ../client ./package.json ./tsconfig.json && tsc -w -p .",
+
+    "test": "mocha ../client/server/linters/tests/*.test.js",
+    "test-watch": "mocha-typescript-watch -p . ../client/server/linters/tests/*.test.js"
   }
 }
