--- a/client/package.json
+++ b/client/package.json
@@ -28,7 +28,7 @@
     "vscode": "^1.16.0"
   },
   "categories": [
-    "Languages",
+    "Programming Languages",
     "Linters"
   ],
   "keywords": [
@@ -569,7 +569,7 @@
   "scripts": {
     "vscode:prepublish": "tsc -p ./",
     "compile": "tsc -p ./",
-    "test": "node ./node_modules/vscode/bin/test",
+    "watch": "tsc -w -p ./",
     "postinstall": "node ./node_modules/vscode/bin/install",
     "update-vscode": "node ./node_modules/vscode/bin/install"
   },
