--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -6,15 +6,16 @@
         ],
         "module": "commonjs",
         "sourceMap": true,
-        "outDir": "out",
+        "outDir": "../client/server",
         "newLine": "LF",
         "noUnusedLocals": false,
         "noUnusedParameters": true,
         "strictNullChecks": true,
-        "experimentalDecorators": true,
-        "emitDecoratorMetadata": true
+        "experimentalDecorators": true
     },
     "include": [
-        "src/extension.ts"
+        "src/server.ts",
+        "src/linters/**/*.ts",
+        "typings.d.ts"
     ]
 }
