--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "publisher": "jbenden",
   "version": "0.6.1",
   "license": "SEE LICENSE IN LICENSE",
-  "icon": "C-Cpp-FlyLint_icon.png",
+  "icon": "https://raw.githubusercontent.com/jbenden/vscode-c-cpp-flylint/master/client/C-Cpp-FlyLint_icon.png",
   "galleryBanner": {
     "color": "#303f9f",
     "theme": "dark"
