--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "vscode": "^1.23.0"
   },
   "categories": [
-    "Languages",
+    "Programming Languages",
     "Linters"
   ],
   "keywords": [
