Rearranged vscode:prepublish npm task

--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "watch:client": "tsc -w -p client/tsconfig.json",
     "compile:server": "cd server && npm run installServer && cd .. && tsc -p server/tsconfig.json",
     "watch:server": "cd server && npm run installServer && cd .. && tsc -w -p server/tsconfig.json",
-    "test": "cd server && npm test && cd .."
+    "test": "cd server && npm test && cd ..",
+    "vscode:prepublish": "npm run compile"
   },
   "devDependencies": {
     "@types/chai": "^4.0.4",
