Only publish from Linux env, pass y in.
(cherry picked from commit 862f7c762d546ad6d2e41ad4dbc8508baf22ead6)

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ script:
   - npm test
 
 before_deploy:
-  - cd client && vsce package
+  - if [ $TRAVIS_OS_NAME == "linux" ]; then cd client && echo y | vsce package; fi
 
 deploy:
   provider: releases
