--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "@types/chai-as-promised": "^7.1.0",
     "@types/mock-fs": "^3.6.30",
     "@types/node": "^7.0.12",
+    "@types/cross-spawn": "^6.0.0",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
     "mocha": "^5.2.0",
