--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
-sudo: false
+sudo: true
 
 language: node_js
 
 node_js:
-  - '8'
+  - '12'
 
 os:
   - osx
@@ -32,4 +32,4 @@ deploy:
   file: "**/*.vsix"
   skip_cleanup: true
   on:
-    tags: true
+    tags: false
