--- a/client/package.json
+++ b/client/package.json
@@ -587,7 +587,8 @@
     "mocha": "^5.2.0",
     "mocha-typescript": "^1.1.14",
     "mock-fs": "^4.5.0",
-    "typescript": "^2.8.3"
+    "typescript": "^2.8.3",
+    "vscode": "^1.1.18"
   },
   "dependencies": {
     "cross-spawn": "^6.0.5",
@@ -595,7 +596,6 @@
     "slash": "^2.0.0",
     "tmp": "^0.0.33",
     "var-expansion": "^0.1.0",
-    "vscode": "^1.1.18",
     "vscode-languageclient": "^4.1.4",
     "vscode-uri": "^1.0.3",
     "which": "^1.3.0"
