Add glob support for c_cpp_properties.json (Fixes #53)
This patch introduces support for glob expressions inside of
`includePath` for the file `c_cpp_properties.json`, only.

--- a/client/package.json
+++ b/client/package.json
@@ -594,6 +594,7 @@
     "cross-spawn": "^6.0.5",
     "lodash": "^4.17.10",
     "slash": "^2.0.0",
+    "fast-glob": "^2.2.6",
     "tmp": "^0.0.33",
     "var-expansion": "^0.1.0",
     "vscode-languageclient": "^4.1.4",
