Debug environment compatibility with Node 12 and VS Code 1.41
Npm packages have been updated and some modifications in the code in accordance with non backwards-compatible npm packages. This fixes a problem mentioned in issue #59, which is that you get the error message "Starting client failed with error code 9.

Signed-off-by: TSonono <tofiksonono@msn.com>

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,7 +17,7 @@
 			"name": "Attach to Server",
 			"type": "node",
 			"request": "attach",
-			"port": 6009,
+			"port": 6011,
 			"sourceMaps": true,
 			"outFiles": [ "${workspaceRoot}/client/server/**/*.js" ],
 			"preLaunchTask": "watch:server"
@@ -39,5 +39,11 @@
 			"outFiles": [ "${workspaceRoot}/client/server/**/*.js" ],
             "preLaunchTask": "compile"
         }
+	],
+	"compounds": [
+		{
+			"name": "Client + Server",
+			"configurations": ["Launch Client", "Attach to Server"]
+		}
 	]
 }
