--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,7 @@
   },
   "homepage": "https://github.com/jbenden/vscode-c-cpp-flylint/blob/master/README.md",
   "engines": {
-    "vscode": "^1.25.0"
+    "vscode": "^1.41.1"
   },
   "categories": [
     "Programming Languages",
@@ -573,22 +573,21 @@
   },
   "scripts": {
     "compile": "tsc -p ./",
-    "watch": "tsc -w -p ./",
-    "postinstall": "node ./node_modules/vscode/bin/install",
-    "update-vscode": "node ./node_modules/vscode/bin/install"
+    "watch": "tsc -w -p ./"
   },
   "devDependencies": {
     "@types/chai": "^4.1.3",
     "@types/chai-as-promised": "^7.1.0",
     "@types/mock-fs": "^3.6.30",
-    "@types/node": "^7.0.12",
+    "@types/node": "^13.7.0",
+    "@types/vscode": "^1.41.0",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
-    "mocha": "^5.2.0",
-    "mocha-typescript": "^1.1.14",
+    "mocha": "^7.0.1",
+    "mocha-typescript": "^1.1.17",
     "mock-fs": "^4.5.0",
-    "typescript": "^2.8.3",
-    "vscode": "^1.1.18"
+    "typescript": "^3.7.5",
+    "vscode-test": "^1.3.0"
   },
   "dependencies": {
     "cross-spawn": "^6.0.5",
@@ -597,8 +596,8 @@
     "fast-glob": "^2.2.6",
     "tmp": "^0.0.33",
     "var-expansion": "^0.1.0",
-    "vscode-languageclient": "^4.1.4",
-    "vscode-uri": "^1.0.3",
+    "vscode-languageclient": "^5.1.0",
+    "vscode-uri": "^2.0.3",
     "which": "^1.3.0"
   }
 }
