Addon support for cppcheck
You can now pass cppcheck addons to this extension which are used for producing even more lint errors. Some slight modifications how unique diagnostic messages are handled when the error comes from the misra addon. This is because the addon produces identical messages for each vialation, but does have unieque codes. The misra addon does not provide the actual error but only the error code and you need to own the misra guidelines to actually know the rule vialation.

--- a/client/package.json
+++ b/client/package.json
@@ -370,6 +370,11 @@
           "default": [],
           "description": "Warnings to suppress. Refer to the CppCheck documentation for what to supply here."
         },
+        "c-cpp-flylint.cppcheck.addons": {
+          "type": "array",
+          "default": [],
+          "description": "Addons to use with cppcheck. For example, misra, cert, etc. Refer to the CppCheck documentation for what to supply here."
+        },
         "c-cpp-flylint.cppcheck.verbose": {
           "type": "boolean",
           "default": false,
