cppcheck: add 'extraArgs' argument
Let users pass extra command line arguments to cppcheck via the
'extraArgs' setting in the client.

Works the same as 'extraArgs' for clang.

This is helpful so users can specify other options that the
settings does not cover, such as "--project", in order to
point cppcheck to a compilation database and "-j", in order
to invoke cppcheck with multiple jobs.

Signed-off-by: Daniel W. S. Almeida <dwlsalmeida@gmail.com>

--- a/client/package.json
+++ b/client/package.json
@@ -314,6 +314,14 @@
           "description": "This option allows you to override the executable called when using CppCheck",
           "default": "cppcheck"
         },
+        "c-cpp-flylint.cppcheck.extraArgs": {
+          "type": [
+            "array",
+            "null"
+          ],
+          "default": null,
+          "description": "Extra verbatim command-line arguments to include on the cppcheck command-line invocation."
+        },
         "c-cpp-flylint.cppcheck.configFile": {
           "type": "string",
           "description": "A .clang_complete file to use/fallback to if no config file is found in the current project",
