--- a/client/package.json
+++ b/client/package.json
@@ -581,6 +581,7 @@
     "watch": "tsc -w -p ./"
   },
   "devDependencies": {
+    "@testdeck/mocha": "^0.1.0",
     "@types/chai": "^4.1.3",
     "@types/chai-as-promised": "^7.1.0",
     "@types/mock-fs": "^3.6.30",
@@ -588,17 +589,16 @@
     "@types/vscode": "^1.41.0",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
-    "mocha": "^7.0.1",
-    "mocha-typescript": "^1.1.17",
+    "mocha": "^7.1.2",
     "mock-fs": "^4.5.0",
     "typescript": "^3.7.5",
     "vscode-test": "^1.3.0"
   },
   "dependencies": {
     "cross-spawn": "^6.0.5",
-    "lodash": "^4.17.10",
-    "slash": "^2.0.0",
     "fast-glob": "^2.2.6",
+    "lodash": "^4.17.15",
+    "slash": "^2.0.0",
     "tmp": "^0.0.33",
     "var-expansion": "^0.1.0",
     "vscode-languageclient": "^5.1.0",
