--- a/package.json
+++ b/package.json
@@ -51,14 +51,14 @@
     "vscode:prepublish": "npm run compile"
   },
   "devDependencies": {
+    "@testdeck/mocha": "^0.1.0",
     "@types/chai": "^4.1.3",
     "@types/chai-as-promised": "^7.1.0",
     "@types/mock-fs": "^3.6.30",
     "@types/node": "^12.12.6",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
-    "mocha": "^7.0.1",
-    "mocha-typescript": "^1.1.17",
+    "mocha": "^7.1.2",
     "mock-fs": "^4.5.0",
     "typescript": "^3.7.5"
   }
