--- a/server/package.json
+++ b/server/package.json
@@ -14,9 +14,9 @@
   },
   "dependencies": {
     "cross-spawn": "^6.0.5",
-    "lodash": "^4.17.10",
-    "slash": "^2.0.0",
     "fast-glob": "^2.2.6",
+    "lodash": "^4.17.15",
+    "slash": "^2.0.0",
     "tmp": "^0.0.33",
     "var-expansion": "^0.1.0",
     "vscode-languageserver": "^5.1.0",
@@ -25,15 +25,15 @@
     "which": "^1.3.0"
   },
   "devDependencies": {
+    "@testdeck/mocha": "^0.1.0",
     "@types/chai": "^4.0.4",
     "@types/chai-as-promised": "^7.1.0",
+    "@types/cross-spawn": "^6.0.0",
     "@types/mock-fs": "^3.6.30",
     "@types/node": "^13.7.0",
-    "@types/cross-spawn": "^6.0.0",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
-    "mocha": "^7.0.1",
-    "mocha-typescript": "^1.1.17",
+    "mocha": "^7.1.2",
     "mock-fs": "^4.5.0",
     "typescript": "^3.7.5"
   },
