--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -13,6 +13,7 @@
         "strictNullChecks": true,
         "experimentalDecorators": true
     },
+	"exclude": ["node_modules", ".vscode-test"],
     "include": [
         "src/server.ts",
         "src/linters/**/*.ts",
