--- a/server/package.json
+++ b/server/package.json
@@ -38,10 +38,8 @@
     "typescript": "^3.7.5"
   },
   "scripts": {
-    "installServer": "installServerIntoExtension ../client ./package.json ./tsconfig.json",
-    "compile": "installServerIntoExtension ../client ./package.json ./tsconfig.json && tsc -p .",
-    "watch": "installServerIntoExtension ../client ./package.json ./tsconfig.json && tsc -w -p .",
-    "test": "mocha ../client/server/linters/tests/*.test.js",
-    "test-watch": "mocha-typescript-watch -p . ../client/server/linters/tests/*.test.js"
+    "compile": "npm run installServer && webpack --config webpack.config-server.js",
+    "installServer": "node ./customInstallServerIntoExtension.js ../client ./package.json ./tsconfig.json ./package-lock.json",
+    "test": "tsc -p ./ && mocha --color ../client/server/linters/tests/*.test.js"
   }
 }
