--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ script:
   - npm test
 
 before_deploy:
-  - if [ $TRAVIS_OS_NAME == "linux" ]; then cd client && echo y | vsce package; fi
+  - if [ $TRAVIS_OS_NAME == "linux" ]; then echo y | vsce package; fi
 
 deploy:
   provider: releases
