--- a/package.json
+++ b/package.json
@@ -233,8 +233,7 @@
           ],
           "default": [
             "all",
-            "extra",
-            "everything"
+            "extra"
           ],
           "description": "Warnings to include in the analysis. Default is everything possible."
         },
