chore: Modernize the code
Signed-off-by: Joseph Benden <joe@benden.us>

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,7 +20,7 @@
 			"port": 6011,
 			"sourceMaps": true,
 			"outFiles": [ "${workspaceRoot}/dist/server/**/*.js" ],
-			"preLaunchTask": "npm: watch:server"
+			"preLaunchTask": "npm: webpack:watch"
 		},
         {
             "name": "Launch Mocha Tests",
