--- a/package.json
+++ b/package.json
@@ -54,8 +54,10 @@
     "@testdeck/mocha": "^0.1.0",
     "@types/chai": "^4.1.3",
     "@types/chai-as-promised": "^7.1.0",
+    "@types/lodash": "^4.14.167",
     "@types/mock-fs": "^3.6.30",
     "@types/node": "^13.7.0",
+    "@types/tmp": "^0.2.0",
     "@types/vscode": "^1.41.0",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
