--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -39,7 +39,6 @@ jobs:
     - name: Upload Release Asset
       uses: Roang-zero1/github-upload-release-artifacts-action@master
       with:
-        args:
-        - '*.vsix'
+        args: "*.vsix"
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
