--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,9 +23,6 @@ jobs:
     - uses: lannonbr/vsce-action@master
       with:
         args: "package"
-        #args: "publish -p $VSCE_TOKEN"
-      #env:
-        #VSCE_TOKEN: ${{ secrets.VSCE_TOKEN }}
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
@@ -42,3 +39,9 @@ jobs:
         args: "*.vsix"
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Publish to VS Code Marketplace
+      uses: lannonbr/vsce-action@master
+      with:
+        args: "publish -p $VSCE_TOKEN"
+      env:
+        VSCE_TOKEN: ${{ secrets.VSCE_TOKEN }}
