--- a/package.json
+++ b/package.json
@@ -118,10 +118,11 @@
           "type": "string",
           "enum": [
             "onSave",
-            "onType"
+            "onType",
+            "onBuild"
           ],
           "default": "onSave",
-          "description": "Run the linter upon typing (onType), when possible, or on save (onSave)."
+          "description": "Run the linter upon typing (onType), upon a build task (onBuild), or upon file save (onSave)."
         },
         "c-cpp-flylint.ignoreParseErrors": {
           "type": "boolean",
