Suppurt for flawfinder

--- a/package.json
+++ b/package.json
@@ -714,6 +714,102 @@
               ]
             }
           }
+        },
+        "c-cpp-flylint.flawfinder.enable": {
+          "type": "boolean",
+          "default": true,
+          "description": "Enable or disable the FlawFincer linter"
+        },
+        "c-cpp-flylint.flawfinder.executable": {
+          "type": "string",
+          "description": "This option allows you to override the executable called when using FlawFinder",
+          "default": "flawfinder"
+        },
+        "c-cpp-flylint.flawfinder.severityLevels": {
+          "type": "object",
+          "description": "Maps the severity levels of CppCheck to VSCode severity levels (Error, Warning, Information, Hint). Setting to 'None' will not show the severity type at all.",
+          "default": {
+            "5": "Error",
+            "4": "Warning",
+            "3": "Warning",
+            "2": "Warning",
+            "1": "Warning",
+            "0": "Information"
+          },
+          "properties": {
+            "5": {
+              "description": "Used when lv 5 issues are found.",
+              "type": "string",
+              "default": "Error",
+              "enum": [
+                "Error",
+                "Warning",
+                "Hint",
+                "Information",
+                "None"
+              ]
+            },
+            "4": {
+              "description": "Used when lv 4 issues are found.",
+              "type": "string",
+              "default": "Warning",
+              "enum": [
+                "Error",
+                "Warning",
+                "Hint",
+                "Information",
+                "None"
+              ]
+            },
+            "3": {
+              "description": "Used when lv 3 issues are found.",
+              "type": "string",
+              "default": "Warning",
+              "enum": [
+                "Error",
+                "Warning",
+                "Hint",
+                "Information",
+                "None"
+              ]
+            },
+            "2": {
+              "description": "Used when lv 2 issues are found.",
+              "type": "string",
+              "default": "Warning",
+              "enum": [
+                "Error",
+                "Warning",
+                "Hint",
+                "Information",
+                "None"
+              ]
+            },
+            "1": {
+              "description": "Used when lv 1 issues are found.",
+              "type": "string",
+              "default": "Warning",
+              "enum": [
+                "Error",
+                "Warning",
+                "Hint",
+                "Information",
+                "None"
+              ]
+            },
+            "0": {
+              "description": "Used when lv 0 issues are found.",
+              "type": "string",
+              "default": "Information",
+              "enum": [
+                "Error",
+                "Warning",
+                "Hint",
+                "Information",
+                "None"
+              ]
+            }
+          }
         }
       }
     }
